--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .glitch-line {
       font-family: monospace, Courier, sans-serif;
       color: #ffffff;
-      font-size: clamp(1.5em, 6vw, 4em);
+      font-size: clamp(1em, 4vw, 2em);
       white-space: pre;
       letter-spacing: 1.2px;
     }
@@ -161,7 +161,7 @@
 <body>
   <div class="header-container">
     <img src="Logo glitch.gif" alt="Logo" />
-    <p class="glitch-line" data-text="somos deanƒunes y hacemos música"></p>
+    <p class="glitch-line" data-text="deanƒunes"></p>
   </div>
 
   <h2 class="glitch-line" data-text="demo ƒ"></h2>
@@ -257,7 +257,7 @@
             mensaje.style.opacity = 0;
             viewerImg.src = img.src;
             viewer.style.display = "flex";
-          }, 3000);
+          }, 2500);
         });
       });
 
