--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       background: black;
       color: white;
       font-family: monospace;
-      font-size: 1.0em;
+      font-size: clamp 1.5em;
       display: flex;
       align-items: center;
       justify-content: center;
