--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
       const mensaje = document.getElementById("mensaje");
 
       const mensajes = [
-        "me recuerda a algo que nunca pasó. entre lo lógico y lo práctico",
+        "me recuerda a algo que nunca pasó",
+        "entre lo lógico y lo práctico",
+        "peleando contra lo que siempre supe",
         "deanƒunes hace música",
         "la costra de la herida es dulce",
         "se derrite el hielo en la alfombra",
